--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,14 +7,14 @@ title: Homepage
 
 .main
 	.hero_img
-		%img.hero(src="/images_s/hero/hero2.png")
+		%img.hero(src="images_s/hero/hero2.png")
 	.magzine_wrapper
 		.index_row
 			.mag_box_large_wrapper
 				.mag_box_large
 					.mag_picBox
 						.thumbnail
-							%img(src="/images_s/mag/mag1.png")
+							%img(src="images_s/mag/mag1.png")
 					.mag_text
 						.number
 							MAR 2016   |   VOLUME CCCXIV
@@ -36,12 +36,12 @@ title: Homepage
 				.mag_box_small
 					.mag_picBox
 						.thumbnail_small
-							%img(src="/images_s/mag/mag2.png")
+							%img(src="images_s/mag/mag2.png")
 			.mag_box_small_wrapper
 				.mag_box_small
 					.mag_picBox
 						.thumbnail_small
-							%img(src="/images_s/mag/mag3.png")
+							%img(src="images_s/mag/mag3.png")
 	.shelf_wrapper
 		.index_row
 			.section_title
@@ -51,7 +51,7 @@ title: Homepage
 				.card_big
 					.card_picBox_big
 						.card_thumbnail_big
-							%img(src="/images_s/card_big/img1.png")
+							%img(src="images_s/card_big/img1.png")
 					.card_big_text
 						.date
 							4 hours ago — Alexandra Witze & Nature magazine
@@ -67,7 +67,7 @@ title: Homepage
 				.card_big
 					.card_picBox_big
 						.card_thumbnail_big
-							%img(src="/images_s/card_big/img2.png")
+							%img(src="images_s/card_big/img2.png")
 					.card_big_text
 						.date
 							February 8, 2016 — Jordana Cepelewicz
@@ -83,7 +83,7 @@ title: Homepage
 				.card_big
 					.card_picBox_big
 						.card_thumbnail_big
-							%img(src="/images_s/card_big/img3.png")
+							%img(src="images_s/card_big/img3.png")
 					.card_big_text
 						.date
 							February 3, 2016 — Apoorva Mandavilli
@@ -99,7 +99,7 @@ title: Homepage
 				.card_big
 					.card_picBox_big
 						.card_thumbnail_big
-							%img(src="/images_s/card_big/img4.png")
+							%img(src="images_s/card_big/img4.png")
 					.card_big_text
 						.date
 							April 15, 2016
@@ -120,7 +120,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img1.png")
+							%img(src="images_s/card_small/img1.png")
 					.card_small_text
 						.post_title2
 							Science Funders Struggle to Deal with Sexual Harassers
@@ -132,7 +132,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img2.png")
+							%img(src="images_s/card_small/img2.png")
 					.card_small_text
 						.post_title2
 							U.S. to Study Zika Link to Guillain–Barré in Puerto Rico
@@ -144,7 +144,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img3.png")
+							%img(src="images_s/card_small/img3.png")
 					.card_small_text
 						.post_title2
 							Beyond Resveratrol: The Anti-Aging NAD Fad
@@ -156,7 +156,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img4.png")
+							%img(src="images_s/card_small/img4.png")
 					.card_small_text
 						.post_title2
 							The Best Diet for Your Brain
@@ -169,7 +169,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img5.png")
+							%img(src="images_s/card_small/img5.png")
 					.card_small_text
 						.post_title2
 							The Truth About Exoplanets
@@ -181,7 +181,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img6.png")
+							%img(src="images_s/card_small/img6.png")
 					.card_small_text
 						.post_title2
 							Apple Opposes Order to Help FBI Unlock iPhone
@@ -193,7 +193,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img7.png")
+							%img(src="images_s/card_small/img7.png")
 					.card_small_text
 						.post_title2
 							The Science behind the DEA's Long War on Marijuana
@@ -205,7 +205,7 @@ title: Homepage
 				.card_small
 					.card_picBox_small
 						.card_thumbnail_small
-							%img(src="/images_s/card_small/img8.png")
+							%img(src="images_s/card_small/img8.png")
 					.card_small_text
 						.post_title2
 							Drones Could Speed Up HIV Tests In Remote Areas
@@ -229,7 +229,7 @@ title: Homepage
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/card_tiny/pic1.png")
+							%img(src="images_s/card_tiny/pic1.png")
 					.card_tiny_text
 						.post_title_tiny
 							The Dark Side of LED Lightbulbs
@@ -241,7 +241,7 @@ title: Homepage
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/card_tiny/pic2.png")
+							%img(src="images_s/card_tiny/pic2.png")
 					.card_tiny_text
 						.post_title_tiny
 							Living in a Quantum World
@@ -253,7 +253,7 @@ title: Homepage
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/card_tiny/pic3.png")
+							%img(src="images_s/card_tiny/pic3.png")
 					.card_tiny_text
 						.post_title_tiny
 							Could a Lack of Water Cause Wars?
@@ -279,7 +279,7 @@ title: Homepage
 						.card_tiny
 							.card_picBox_tiny
 								.card_thumbnail_tiny
-									%img(src="/images_s/report/img1.png")
+									%img(src="images_s/report/img1.png")
 							.card_tiny_text
 								.post_title_tiny
 									Gravitational Waves From Black Holes
@@ -291,7 +291,7 @@ title: Homepage
 						.card_tiny
 							.card_picBox_tiny
 								.card_thumbnail_tiny
-									%img(src="/images_s/report/img2.png")
+									%img(src="images_s/report/img2.png")
 							.card_tiny_text
 								.post_title_tiny
 									Gravitational Waves Are the Ringing of...
@@ -303,7 +303,7 @@ title: Homepage
 						.card_tiny
 							.card_picBox_tiny
 								.card_thumbnail_tiny
-									%img(src="/images_s/report/img3.png")
+									%img(src="images_s/report/img3.png")
 							.card_tiny_text
 								.post_title_tiny
 									Watch How Gravitational Waves Dance
@@ -338,8 +338,8 @@ title: Homepage
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/video/img1.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/video/img1.png")
 					.card_video_text
 						.video_title
 							Space Junk Litters the Solar...
@@ -349,8 +349,8 @@ title: Homepage
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/video/img2.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/video/img2.png")
 					.card_video_text
 						.video_title
 							Soft Robots
@@ -360,8 +360,8 @@ title: Homepage
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/video/img3.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/video/img3.png")
 					.card_video_text
 						.video_title
 							When Black Holes Collide
@@ -371,8 +371,8 @@ title: Homepage
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/video/img4.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/video/img4.png")
 					.card_video_text
 						.video_title
 							Fish on Evolution’s Fast Track
@@ -387,27 +387,27 @@ title: Homepage
 						.filter_text
 							RECENT PODCASTS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.series_wrapper
 						.filter_text
 							SERIES
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.topics_wrapper
 						.filter_text
 							TOPICS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 			.podcast_wrapper
 				.podcast_card
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Gravitational Waves Found: Kip Thorne Explains
@@ -429,11 +429,11 @@ title: Homepage
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Greenland's Meltwater May Fertilize Fjords with Phosphorus
@@ -455,11 +455,11 @@ title: Homepage
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Opioid Epidemic Gets Treatment Prescription
