--- a/source/index2.html.haml
+++ b/source/index2.html.haml
@@ -32,7 +32,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/1.png")
+								%img(src="images_s/2/1.png")
 						.card_small_text
 							.post_title2
 								Science Funders Struggle to Deal with Sexual...
@@ -45,7 +45,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/2.png")
+								%img(src="images_s/2/2.png")
 						.card_small_text
 							.post_title2
 								India's Government Is Increasingly Antiscience
@@ -58,7 +58,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/3.png")
+								%img(src="images_s/2/3.png")
 						.card_small_text
 							.post_title2
 								The Truth About Exoplanets
@@ -71,7 +71,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/4.png")
+								%img(src="images_s/2/4.png")
 						.card_small_text
 							.post_title2
 								A Day on Pluto Reconstructed from New Horizons
@@ -85,7 +85,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/5.png")
+								%img(src="images_s/2/5.png")
 						.card_small_text
 							.post_title2
 								Did This Extinct Human Species Commit Homicide?
@@ -98,7 +98,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/6.png")
+								%img(src="images_s/2/6.png")
 						.card_small_text
 							.post_title2
 								2 Apes Team Up to Kill Another
@@ -111,7 +111,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/7.png")
+								%img(src="images_s/2/7.png")
 						.card_small_text
 							.post_title2
 								What Sparked the Cambrian Explosion?
@@ -124,7 +124,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/8.png")
+								%img(src="images_s/2/8.png")
 						.card_small_text
 							.post_title2
 								Controversy Swirl around New Human Species
@@ -138,7 +138,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/9.png")
+								%img(src="images_s/2/9.png")
 						.card_small_text
 							.post_title2
 								Ancient Footprints Discovered in Arizona
@@ -151,7 +151,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/10.png")
+								%img(src="images_s/2/10.png")
 						.card_small_text
 							.post_title2
 								Octopuses Are Surprisingly Social--and Confrontational
@@ -164,7 +164,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/11.png")
+								%img(src="images_s/2/11.png")
 						.card_small_text
 							.post_title2
 								The Collective Wisdom of Ants
@@ -177,7 +177,7 @@ title: Inner Page
 					.card_small
 						.card_picBox_small
 							.card_thumbnail_small
-								%img(src="/images_s/2/12.png")
+								%img(src="images_s/2/12.png")
 						.card_small_text
 							.post_title2
 								Exoplanet Census Suggests Earth Is Special
@@ -195,8 +195,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/1.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/1.png")
 					.card_video_text
 						.video_title
 							How Math is Visual
@@ -206,8 +206,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/2.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/2.png")
 					.card_video_text
 						.video_title
 							Scientists Find New Drug Targets for Psoriasis
@@ -217,8 +217,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/3.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/3.png")
 					.card_video_text
 						.video_title
 							The World's Biggest Volcano Is a Magnetic Mix-Up
@@ -228,8 +228,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/4.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/4.png")
 					.card_video_text
 						.video_title
 							How to Do Quantum Magnetic Levitation at Home
@@ -239,8 +239,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/5.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/5.png")
 					.card_video_text
 						.video_title
 							Why Toothpaste Makes Orange Juice Taste Bad
@@ -250,8 +250,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/6.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/6.png")
 					.card_video_text
 						.video_title
 							Paint Pigment Transformed to Work Wonders
@@ -261,8 +261,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/7.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/7.png")
 					.card_video_text
 						.video_title
 							3-D Printed Trilobites
@@ -272,8 +272,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/8.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/8.png")
 					.card_video_text
 						.video_title
 							How We Are All a Little Nean 
@@ -283,8 +283,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/9.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/9.png")
 					.card_video_text
 						.video_title
 							Migratory Birds May Use Magnetic "GPS"
@@ -294,8 +294,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/10.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/10.png")
 					.card_video_text
 						.video_title
 							One Photon's Journey: Saul Perlmutter
@@ -305,8 +305,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/11.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/11.png")
 					.card_video_text
 						.video_title
 							Bouncing Bots
@@ -316,8 +316,8 @@ title: Inner Page
 						.card_thumbnail_video
 							.video_play_button
 								.triangle
-									%img(src="/images_s/video/tri.png")
-							%img(src="/images_s/2_video/12.png")
+									%img(src="images_s/video/tri.png")
+							%img(src="images_s/2_video/12.png")
 					.card_video_text
 						.video_title
 							High Heels, High Risk
@@ -331,27 +331,27 @@ title: Inner Page
 						.filter_text
 							RECENT PODCASTS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.series_wrapper
 						.filter_text
 							SERIES
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.topics_wrapper
 						.filter_text
 							TOPICS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 			.podcast_wrapper
 				.podcast_card
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Cutting Carbon Pollution Could Save Health Care $
@@ -373,11 +373,11 @@ title: Inner Page
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Billion Sun–Bright Events Leave Radio Wave Clues
@@ -399,11 +399,11 @@ title: Inner Page
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Cyber Thieves Hold Hospital's Data for Ransom
@@ -425,11 +425,11 @@ title: Inner Page
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Ball Really Looks Bigger to Better Hitters
@@ -451,11 +451,11 @@ title: Inner Page
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							HPV Vaccine Needs to Reach Boys, Too
@@ -477,11 +477,11 @@ title: Inner Page
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Mantis Shrimp Shells May Inspire Next-Generation Computer Chips
