--- a/source/podcasts.html.haml
+++ b/source/podcasts.html.haml
@@ -14,27 +14,27 @@ title: Post
 						.filter_text
 							RECENT PODCASTS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.series_wrapper
 						.filter_text
 							SERIES
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 					.topics_wrapper
 						.filter_text
 							TOPICS
 						.arrow_img
-							%img(src="/images_s/video/arrow.png")
+							%img(src="images_s/video/arrow.png")
 			.podcast_wrapper
 				.podcast_card
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Cutting Carbon Pollution Could Save Health Care $
@@ -56,11 +56,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Billion Sun–Bright Events Leave Radio Wave Clues
@@ -82,11 +82,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Cyber Thieves Hold Hospital's Data for Ransom
@@ -108,11 +108,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Ball Really Looks Bigger to Better Hitters
@@ -134,11 +134,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							HPV Vaccine Needs to Reach Boys, Too
@@ -160,11 +160,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Mantis Shrimp Shells May Inspire Next-Generation Computer Chips
@@ -186,11 +186,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							The Big Gath Dig: Goliath's Hometown
@@ -212,11 +212,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Lizard Picks Best Color--to Stand against
@@ -238,11 +238,11 @@ title: Post
 					.podcast_play_button_wrapper
 						.podcast_play_button
 							.triangle_podcast
-								%img(src="/images_s/video/tri.png")
+								%img(src="images_s/video/tri.png")
 					.podcast_download_button_wrapper
 						.podcast_download_button
 							.download
-								%img(src="/images_s/video/download.png")
+								%img(src="images_s/video/download.png")
 					.podcast_title_wrapper
 						.podcast_title
 							Climate Change Most Affects Nations That Didn't Produce It
