--- a/source/post.html.haml
+++ b/source/post.html.haml
@@ -22,27 +22,27 @@ title: Post
 					.share_button_wrapper
 						.share_button
 							.facebook_icon
-								%img(src="/images_s/2_button/facebook.png")
+								%img(src="images_s/2_button/facebook.png")
 					.share_button_wrapper
 						.share_button
 							.twitter_icon
-								%img(src="/images_s/2_button/twitter.png")
+								%img(src="images_s/2_button/twitter.png")
 					.share_button_wrapper
 						.share_button
 							.reddit_icon
-								%img(src="/images_s/2_button/reddit.png")
+								%img(src="images_s/2_button/reddit.png")
 					.share_button_wrapper
 						.share_button
 							.share_icon
-								%img(src="/images_s/2_button/share.png")
+								%img(src="images_s/2_button/share.png")
 					.share_button_wrapper
 						.share_button
 							.email_icon
-								%img(src="/images_s/2_button/email.png")
+								%img(src="images_s/2_button/email.png")
 					.share_button_wrapper
 						.share_button
 							.print_icon
-								%img(src="/images_s/2_button/print.png")
+								%img(src="images_s/2_button/print.png")
 				.post_page_body
 					.post_index
 						Astronomers are beginning to glimpse what exoplanets orbiting distant suns are actually like.
@@ -65,7 +65,7 @@ title: Post
 					.body_picture_wrapper
 						.body_picture
 							.body_thumbnail
-								%img(src="/images_s/3_pic/1.png")
+								%img(src="images_s/3_pic/1.png")
 					.body_picture_description
 						Kepler-186f, the first known Earth-sized exoplanet in a star's habitable zone (artist's impression). - NASA Ames/JPL-Caltech/T. Pyle
 					.body_text
@@ -79,7 +79,7 @@ title: Post
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/3_recommend/1.png")
+							%img(src="images_s/3_recommend/1.png")
 					.card_tiny_text
 						.post_title_tiny
 							Ebola Survivor's Blood Holds Promise of New Treatment
@@ -91,7 +91,7 @@ title: Post
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/3_recommend/2.png")
+							%img(src="images_s/3_recommend/2.png")
 					.card_tiny_text
 						.post_title_tiny
 							Functional Artificial Mouse Sperm Created in a Dish
@@ -103,7 +103,7 @@ title: Post
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/3_recommend/3.png")
+							%img(src="images_s/3_recommend/3.png")
 					.card_tiny_text
 						.post_title_tiny
 							Test Marks Milestone for Deep-Space Gravitational Wave
@@ -115,7 +115,7 @@ title: Post
 				.card_tiny
 					.card_picBox_tiny
 						.card_thumbnail_tiny
-							%img(src="/images_s/card_tiny/pic3.png")
+							%img(src="images_s/card_tiny/pic3.png")
 					.card_tiny_text
 						.post_title_tiny
 							Could a Lack of Water Cause Wars?
