--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -5,7 +5,7 @@
 				%ul.title
 					%li 
 						%a{:href => 'index.html'}
-							%img(src="/images_s/header/logo.png")
+							%img(src="images_s/header/logo.png")
 			.navRow
 				%ul.title
 					%li
@@ -29,7 +29,7 @@
 					%li 
 						%a{:href => ''} STORE
 					%li 
-						%img(src="/images_s/header/search.png")
+						%img(src="images_s/header/search.png")
 
 
 
