--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -8,6 +8,7 @@ $bar-blue: #176CB0;
 .nav {
 	height: 100px;
 	background-image: url(../../images_s/header/bg.png);
+	background-color: white;
 	background-size: 100% 100%;
 	@include media($tablet){
 	    height: 70px;
